# jsmetrics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  bash_script_test  change_git_author_names  compute_jetstream_metric.py  environment.yml  jetstream_metrics.py  main.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-pypi.yml  publish-testpypi.yml  scorecard.yml
data/: get_data.py  get_era5_data.py  get_era5_u_data.py  get_era5_v_data.py  get_era5_zg_data.py
docs/: Makefile  components.rst  conf.py  index.rst  installation.rst  make.bat  metrics.rst  statement.rst  usage.rst
experiments/: bash_script_test.sh  calculate_a_metric.py  calculate_metrics.py  calculate_metrics_from_data.py  get_available_metrics.py  main.py  test_available_metrics.py  test_plot.py  test_uvwind.py  test_woolings.py
jet_stream_metrics/: __init__.py  compute_jetstream_metric.py  data_formatter.py  jetstream_metrics.py  jetstream_metrics_utils.py
jetstream_metrics/: __init__.py  compute_jetstream_metric.py  compute_metrics.py  data_formatter.py  jetstream_metric_dict.py  jetstream_metrics.py  jetstream_metrics_utils.py
jsmetrics/: __init__.py  compute_metrics.py  data_utils.py  details_for_all_metrics.py  general_utils.py  jet_core_algorithms.py  jet_metrics.py  jet_metrics_components.py  jetstream_algorithms  jetstream_algorithms.py  jetstream_algorithms_components.py  jetstream_metrics.py  jetstream_metrics_components.py  jetstream_metrics_dict.py  jetstream_metrics_utils.py  spatial_utils.py  waviness_metrics.py  waviness_metrics_components.py  windspeed_utils.py  xgrid_utils.py
jsmetrics/core/: check_data.py
jsmetrics/metrics/: jet_core_algorithms.py  jet_core_algorithms_components.py  jet_metrics.py  jet_metrics_components.py  jet_statistics.py  jet_statistics_components.py  waviness_metrics.py  waviness_metrics_components.py
jsmetrics/utils/: data_utils.py  spatial_utils.py  windspeed_utils.py
metrics/: __init__.py  compute_metrics.py  data_formatter.py  general_utils.py  jetstream_metrics.py  jetstream_metrics_dict.py  jetstream_metrics_utils.py  metric_computer.py  windspeed_utils.py  zonal_wind_response_index.py
plotting/: plotter.py
tests/: test_compute_metrics.py  test_jet_metrics.py  test_metric_speed.py  test_plot.py  test_windspeed_utils.py
tests/data/: ua_day_UKESM1-0-LL_ssp585_r2i1p1f2_gn_20150101-20150105.nc  va_day_UKESM1-0-LL_ssp585_r2i1p1f2_gn_20150101-20150105.nc  zg_day_UKESM1-0-LL_ssp585_r2i1p1f2_gn_20150101-20150105.nc
tests/integration/: test_plot.py
tests/intergration/: test_plot.py
tests/metric_verification/: metric_verification.ipynb
tests/timing/: test_metric_timing.py
tests/unit/: __init__.py  test_compute_metrics.py  test_data_utils.py  test_general_utils.py  test_jet_algorithms.py  test_jet_metrics.py  test_jet_statistics.py  test_spatial_utils.py  test_waviness_metrics.py  test_windspeed_utils.py
