[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[aliases]
test = pytest

[flake8]
max-line-length = 79
exclude =
	.git,
	docs,
	build,
	.eggs,
ignore =
    E203
    E203
    E501
    W503

[isort]
profile = black