[bumpversion]
current_version = 0.0.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+).(?P<patch>\d+)(\-(?P<release>[a-z]+)?
serialize =
    {major}.{minor}.{patch}-{release} 
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = alpha
values =
    alpha
    beta
    gamma

[bumpversion:file:setup.py]
search = VERSION = "{current_version}"
replace = VERSION = "{new_version}"

[bumpversion:file:jsmetrics/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[aliases]
test = pytest

[flake8]
max-line-length = 79
exclude =
	.git,
	docs/conf.py,
	build,
	.eggs,
ignore =
    E203
    E203
    E501
    W503

[tool:pytest]
collect_ignore = ['setup.py']

[isort]
profile = black