[bumpversion]
current_version = 0.1.2-beta
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+).(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
first_value = alpha
values = 
	alpha
	beta
	gamma

[bumpversion:file:setup.py]
search = VERSION = "{current_version}"
replace = VERSION = "{new_version}"

[bumpversion:file:jsmetrics/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
license_files = LICENSE

[aliases]
test = pytest

[flake8]
max-line-length = 79
exclude = 
	.git,
	docs/conf.py,
	build,
	.eggs,
	jsmetrics/__init__.py,
ignore = 
	E203
	E203
	E501
	W503

[tool:pytest]
addopts = --verbose

[isort]
profile = black
